form input addition

--- a/statseo.html
+++ b/statseo.html
@@ -297,6 +297,7 @@
 		      <button type="submit" class="btn btn-primary" id="submitYes">
 		        submit!
 		      </button>
+			  <div id="inputURL"></div>
 		      <hr>
 			  
 			  <!-- Special typography from Bootstrap for lead paragraph. -->
