form input addition

--- a/statseo.html
+++ b/statseo.html
@@ -169,6 +169,8 @@
 	
 	<script class="code" type="text/javascript">
 	
+	$("#content span").html("World!");
+	
 	$(document).ready(function(){
 		var s1 = [758, 'Num. urls']
 		var s2 = [-3742, 'Num. urls']
@@ -297,7 +299,7 @@
 		      <button type="submit" class="btn btn-primary" id="submitYes">
 		        submit!
 		      </button>
-			  <div id="inputURL"></div>
+			  <div id="content">Hello <span></span></div>
 		      <hr>
 			  
 			  <!-- Special typography from Bootstrap for lead paragraph. -->
