--- a/statseo.html
+++ b/statseo.html
@@ -135,7 +135,7 @@
 	$(document).ready(function() {
 	    $('#example3').dataTable( {
 	        "bProcessing": true,
-	        "sAjaxSource": "/json/summary/23_rawpearls_Xhat_05-Nov-13.json",
+	        "sAjaxSource": "/json/summary/23_rawpearls_Xhat*.json",
 	        "sAjaxDataProp": "onsite",
 		    "aoColumns": [
 		                   null,
