tweaks to offiste page

--- a/statseo.html
+++ b/statseo.html
@@ -306,13 +306,12 @@
 		        submit!
 		      </button>
 			  <div id="someDiv">
-				  for 
+			      <hr>
+				  <!-- Special typography from Bootstrap for lead paragraph. -->
+				  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
+				  <p class="lead" >for </p>
 			  </div>
-		      <hr>
-			  
-			  <!-- Special typography from Bootstrap for lead paragraph. -->
-			  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-			  <p class="lead" >for www.leighmans.com</p>
+		      
 		  </div>
 	  </div>
 	  
