tweaks to offiste page

--- a/statseo.html
+++ b/statseo.html
@@ -305,11 +305,12 @@
 		      <button onclick="doStuff()" type="submit" class="btn btn-primary" id="submitYes">
 		        submit!
 		      </button>
-			  <div id="someDiv">
+			  <div id="someDiv" class="lead" >
 			      <hr>
 				  <!-- Special typography from Bootstrap for lead paragraph. -->
 				  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-				  <p class="lead" >for </p>
+				  <!-- <p >for </p> -->
+				  for 
 			  </div>
 		      
 		  </div>
