--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -141,7 +141,7 @@
 	$(document).ready(function() {
 		$('#example1').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/featureOff1.json",
+			"sAjaxSource": "/json/drilldown/feature1.json",
 			"sAjaxDataProp": "Number of images in body",
 			"aaSorting": [[ 2, "desc" ]]
 		} );
@@ -149,7 +149,7 @@
 	$(document).ready(function() {
 		$('#example2').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/featureOff2.json",
+			"sAjaxSource": "/json/drilldown/feature2.json",
 			"sAjaxDataProp": "Proximity of title tag words to external bound hyperlinks",
 			"aaSorting": [[ 2, "desc" ]]
 		} );
@@ -157,7 +157,7 @@
 	$(document).ready(function() {
 		$('#example3').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/featureOff3.json",
+			"sAjaxSource": "/json/drilldown/feature3.json",
 			"sAjaxDataProp": "Number of scripts",
 			"aaSorting": [[ 2, "desc" ]]
 		} );
@@ -165,7 +165,7 @@
 	$(document).ready(function() {
 		$('#example4').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/featureOff4.json",
+			"sAjaxSource": "/json/drilldown/feature4.json",
 			"sAjaxDataProp": "Number of hyperlinks",
 			"aaSorting": [[ 2, "desc" ]]
 		} );
@@ -173,7 +173,7 @@
 	$(document).ready(function() {
 		$('#example5').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/featureOff5.json",
+			"sAjaxSource": "/json/drilldown/feature5.json",
 			"sAjaxDataProp": "Title character length",
 			"aaSorting": [[ 2, "desc" ]]
 		} );
@@ -181,7 +181,7 @@
 	$(document).ready(function() {
 		$('#example6').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/featureOff6.json",
+			"sAjaxSource": "/json/drilldown/feature6.json",
 			"sAjaxDataProp": "Number of external CSS styles",
 			"aaSorting": [[ 2, "desc" ]]
 		} );
@@ -189,7 +189,7 @@
 	$(document).ready(function() {
 		$('#example7').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/featureOff7.json",
+			"sAjaxSource": "/json/drilldown/feature7.json",
 			"sAjaxDataProp": "Number of titles same as h1",
 			"aaSorting": [[ 2, "desc" ]]
 		} );
@@ -197,7 +197,7 @@
 	$(document).ready(function() {
 		$('#example8').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/featureOff8.json",
+			"sAjaxSource": "/json/drilldown/feature8.json",
 			"sAjaxDataProp": "Title total number of syllables",
 			"aaSorting": [[ 2, "desc" ]]
 		} );
@@ -205,7 +205,7 @@
 	$(document).ready(function() {
 		$('#example9').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/featureOff9.json",
+			"sAjaxSource": "/json/drilldown/feature9.json",
 			"sAjaxDataProp": "Anchor number of unique words",
 			"aaSorting": [[ 2, "desc" ]]
 		} );
@@ -213,7 +213,7 @@
 	$(document).ready(function() {
 		$('#example10').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/featureOff10.json",
+			"sAjaxSource": "/json/drilldown/feature10.json",
 			"sAjaxDataProp": "Total number of dictionary words",
 			"aaSorting": [[ 2, "desc" ]]
 		} );
@@ -358,7 +358,7 @@ rel="stylesheet" type="text/css">
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>StatSEO: Onsite drilldown</h1>
+          <h1>StatSEO: Offsite drilldown</h1>
         </div>
       </div> 
 
@@ -366,7 +366,7 @@ rel="stylesheet" type="text/css">
 		  <div class="span12">
 			  <!-- Special typography from Bootstrap for lead paragraph. -->
 			  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-			  <p class="lead">for www.leighmans.com</p>
+			  <p class="lead">for www.rawpearls.com</p>
 		  </div>
 	  </div>
 	  <div class="row-fluid pitch">
