--- a/statseo.html
+++ b/statseo.html
@@ -141,6 +141,7 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/23_rawpearls_Xhat_05-Nov-13.json",
 	        "sAjaxDataProp": "onsite",
+			"aaSorting": [[ 3, "desc" ]],
 		    "aoColumns": [
 		                   null,
 		                   null,
@@ -157,6 +158,7 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/23_rawpearls_Xhat_05-Nov-13.json",
 	        "sAjaxDataProp": "onsite",
+			"aaSorting": [[ 5, "desc" ]],
 		    "aoColumns": [
 		                   null,
 		                   null,
@@ -173,6 +175,7 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/23_rawpearls_XhatOff_05-Nov-13.json",
 			"sAjaxDataProp": "offsite",
+			"aaSorting": [[ 3, "desc" ]],
 			"aoColumns": [
 			null,
 			null,
@@ -189,6 +192,7 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/23_rawpearls_XhatOff_05-Nov-13.json",
 			"sAjaxDataProp": "offsite",
+			"aaSorting": [[ 5, "desc" ]],
 		    "aoColumns": [
 		                   null,
 		                   null,
