--- a/statseo.html
+++ b/statseo.html
@@ -158,7 +158,7 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/23_rawpearls_Xhat_05-Nov-13.json",
 	        "sAjaxDataProp": "onsite",
-			"aaSorting": [[ 5, "asc" ]],
+			"aaSorting": [[ 3, "asc" ]],
 		    "aoColumns": [
 		                   null,
 		                   null,
@@ -192,7 +192,7 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/23_rawpearls_XhatOff_05-Nov-13.json",
 			"sAjaxDataProp": "offsite",
-			"aaSorting": [[ 5, "asc" ]],
+			"aaSorting": [[ 3, "asc" ]],
 		    "aoColumns": [
 		                   null,
 		                   null,
@@ -517,7 +517,7 @@
 			  <div class="panel panel-success" id="healthyBackLinks">
 				  <div class="panel-heading">
 					  <h3 class="panel-title">
-						  Healthy backlinks
+						  Healthy URLs
 					  </h3>
 				  </div>
 				  <div class="panel-body">
@@ -584,7 +584,7 @@
 					 <div class="panel panel-danger">
 						  <div class="panel-heading">
 							  <h3 class="panel-title">
-								  URLs at risk
+								  Harmful backlinks
 							  </h3>
 						  </div>
 						  <div class="panel-body">
