--- a/statseo.html
+++ b/statseo.html
@@ -141,7 +141,7 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/23_rawpearls_Xhat_05-Nov-13.json",
 	        "sAjaxDataProp": "onsite",
-			"aaSorting": [[ 3, "asc" ]],
+			"aaSorting": [[ 2, "desc" ]],
 		    "aoColumns": [
 		                   null,
 		                   null,
@@ -158,7 +158,7 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/23_rawpearls_Xhat_05-Nov-13.json",
 	        "sAjaxDataProp": "onsite",
-			"aaSorting": [[ 3, "asc" ]],
+			"aaSorting": [[ 4, "desc" ]],
 		    "aoColumns": [
 		                   null,
 		                   null,
@@ -175,7 +175,7 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/23_rawpearls_XhatOff_05-Nov-13.json",
 			"sAjaxDataProp": "offsite",
-			"aaSorting": [[ 3, "asc" ]],
+			"aaSorting": [[ 2, "desc" ]],
 			"aoColumns": [
 			null,
 			null,
@@ -192,7 +192,7 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/23_rawpearls_XhatOff_05-Nov-13.json",
 			"sAjaxDataProp": "offsite",
-			"aaSorting": [[ 3, "asc" ]],
+			"aaSorting": [[ 4, "desc" ]],
 		    "aoColumns": [
 		                   null,
 		                   null,
