--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -141,9 +141,15 @@
 	$(document).ready(function() {
 		$('#example1').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/feature1.json",
-			"sAjaxDataProp": "Number of images in body",
-			"aaSorting": [[ 2, "desc" ]]
+			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
+			"sAjaxDataProp": "average_backlink_flesch_reading_ease",
+			"aoColumns": [
+			        { "mData": "html_id" },
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
 	$(document).ready(function() {
@@ -366,7 +372,7 @@ rel="stylesheet" type="text/css">
 		  <div class="span12">
 			  <!-- Special typography from Bootstrap for lead paragraph. -->
 			  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-			  <p class="lead">for www.leighmans.com</p>
+			  <p class="lead">for www.alchemyviral.com</p>
 		  </div>
 	  </div>
 	  <div class="row-fluid pitch">
@@ -376,17 +382,18 @@ rel="stylesheet" type="text/css">
 		  <h2>Influential Feature Value and Delta to Winning Mean</h2>
 		  <hr>
 
-			  <h3><a id="F1">Number of images in body</a></h3>
+			  <h3><a id="F1">average_backlink_flesch_reading_ease</a></h3>
 				  
 		  <div id="dynamic">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example1">
 				  <thead>
 					<tr>
-						<th width="80%" rowspan="2">Page URL</th>
-						<th width="20%" colspan="2">Feature data</th>  
+						<th width="70%" rowspan="2">Page URL</th>
+						<th width="30%" colspan="2">Feature data</th>  
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
+						<th width="10%">Cluster mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -397,6 +404,7 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
+						  <th>Cluster mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
