90pc through offsite table mods

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -144,10 +144,10 @@
 			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
 			"sAjaxDataProp": "onsite",
 			"aoColumns": [
-			        { "mData": "onsite.average_backlink_flesch_reading_ease.html_id" },
-			        { "mData": "onsite.average_backlink_flesch_reading_ease.feature_value" },
-			        { "mData": "onsite.average_backlink_flesch_reading_ease.cluster_win_mean" },
-			        { "mData": "onsite.average_backlink_flesch_reading_ease.delta" }
+			        { "mData": "average_backlink_flesch_reading_ease.html_id" },
+			        { "mData": "average_backlink_flesch_reading_ease.feature_value" },
+			        { "mData": "average_backlink_flesch_reading_ease.cluster_win_mean" },
+			        { "mData": "average_backlink_flesch_reading_ease.delta" }
 					],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
