90pc through offsite table mods

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -155,73 +155,127 @@
 	$(document).ready(function() {
 		$('#example2').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/feature2.json",
-			"sAjaxDataProp": "Proximity of title tag words to external bound hyperlinks",
-			"aaSorting": [[ 2, "desc" ]]
+			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
+			"sAjaxDataProp": "onsite.2",
+			"aoColumns": [
+			        { "mData": "html_id" },
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
 	$(document).ready(function() {
 		$('#example3').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/feature3.json",
-			"sAjaxDataProp": "Number of scripts",
-			"aaSorting": [[ 2, "desc" ]]
+			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
+			"sAjaxDataProp": "onsite.3",
+			"aoColumns": [
+			        { "mData": "html_id" },
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
 	$(document).ready(function() {
 		$('#example4').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/feature4.json",
-			"sAjaxDataProp": "Number of hyperlinks",
-			"aaSorting": [[ 2, "desc" ]]
+			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
+			"sAjaxDataProp": "onsite.Number of hyperlinks",
+			"aoColumns": [
+			        { "mData": "html_id" },
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
 	$(document).ready(function() {
 		$('#example5').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/feature5.json",
-			"sAjaxDataProp": "Title character length",
-			"aaSorting": [[ 2, "desc" ]]
+			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
+			"sAjaxDataProp": "onsite.Title character length",
+			"aoColumns": [
+			        { "mData": "html_id" },
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
 	$(document).ready(function() {
 		$('#example6').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/feature6.json",
-			"sAjaxDataProp": "Number of external CSS styles",
-			"aaSorting": [[ 2, "desc" ]]
+			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
+			"sAjaxDataProp": "onsite.Number of external CSS styles",
+			"aoColumns": [
+			        { "mData": "html_id" },
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
 	$(document).ready(function() {
 		$('#example7').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/feature7.json",
-			"sAjaxDataProp": "Number of titles same as h1",
-			"aaSorting": [[ 2, "desc" ]]
+			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
+			"sAjaxDataProp": "onsite.Number of titles same as h1",
+			"aoColumns": [
+			        { "mData": "html_id" },
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
 	$(document).ready(function() {
 		$('#example8').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/feature8.json",
-			"sAjaxDataProp": "Title total number of syllables",
-			"aaSorting": [[ 2, "desc" ]]
+			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
+			"sAjaxDataProp": "onsite.Title total number of syllables",
+			"aoColumns": [
+			        { "mData": "html_id" },
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
 	$(document).ready(function() {
 		$('#example9').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/feature9.json",
-			"sAjaxDataProp": "Anchor number of unique words",
-			"aaSorting": [[ 2, "desc" ]]
+			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
+			"sAjaxDataProp": "onsite.Anchor number of unique words",
+			"aoColumns": [
+			        { "mData": "html_id" },
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
 	$(document).ready(function() {
 		$('#example10').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/feature10.json",
-			"sAjaxDataProp": "Total number of dictionary words",
-			"aaSorting": [[ 2, "desc" ]]
+			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
+			"sAjaxDataProp": "onsite.Total number of dictionary words",
+			"aoColumns": [
+			        { "mData": "html_id" },
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
 } );
@@ -421,11 +475,12 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example2">
 				  <thead>
 					<tr>
-						<th width="80%" rowspan="2">Page URL</th>
-						<th width="20%" colspan="2">Feature data</th>  
+						<th width="70%" rowspan="2">Page URL</th>
+						<th width="30%" colspan="3">Feature data</th>  
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
+						<th width="10%">Cluster mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -436,10 +491,11 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
+						  <th>Cluster mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
-						  <th colspan="2">Feature data</th>
+						  <th colspan="3">Feature data</th>
 					  </tr>
 				  </tfoot>
 			  </table>
@@ -452,11 +508,12 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example3">
 				  <thead>
 					<tr>
-						<th width="80%" rowspan="2">Page URL</th>
-						<th width="20%" colspan="2">Feature data</th>  
+						<th width="70%" rowspan="2">Page URL</th>
+						<th width="30%" colspan="3">Feature data</th>  
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
+						<th width="10%">Cluster mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -467,10 +524,11 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
+						  <th>Cluster mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
-						  <th colspan="2">Feature data</th>
+						  <th colspan="3">Feature data</th>
 					  </tr>
 				  </tfoot>
 			  </table>
@@ -483,11 +541,12 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example4">
 				  <thead>
 					<tr>
-						<th width="80%" rowspan="2">Page URL</th>
-						<th width="20%" colspan="2">Feature data</th>  
+						<th width="70%" rowspan="2">Page URL</th>
+						<th width="30%" colspan="3">Feature data</th>  
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
+						<th width="10%">Cluster mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -498,10 +557,11 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
+						  <th>Cluster mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
-						  <th colspan="2">Feature data</th>
+						  <th colspan="3">Feature data</th>
 					  </tr>
 				  </tfoot>
 			  </table>
@@ -514,11 +574,12 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example5">
 				  <thead>
 					<tr>
-						<th width="80%" rowspan="2">Page URL</th>
-						<th width="20%" colspan="2">Feature data</th>  
+						<th width="70%" rowspan="2">Page URL</th>
+						<th width="30%" colspan="3">Feature data</th>  
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
+						<th width="10%">Cluster mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -529,10 +590,11 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
+						  <th>Cluster mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
-						  <th colspan="2">Feature data</th>
+						  <th colspan="3">Feature data</th>
 					  </tr>
 				  </tfoot>
 			  </table>
@@ -545,11 +607,12 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example6">
 				  <thead>
 					<tr>
-						<th width="80%" rowspan="2">Page URL</th>
-						<th width="20%" colspan="2">Feature data</th>  
+						<th width="70%" rowspan="2">Page URL</th>
+						<th width="30%" colspan="3">Feature data</th>  
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
+						<th width="10%">Cluster mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -560,10 +623,11 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
+						  <th>Cluster mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
-						  <th colspan="2">Feature data</th>
+						  <th colspan="3">Feature data</th>
 					  </tr>
 				  </tfoot>
 			  </table>
@@ -576,11 +640,12 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example7">
 				  <thead>
 					<tr>
-						<th width="80%" rowspan="2">Page URL</th>
-						<th width="20%" colspan="2">Feature data</th>  
+						<th width="70%" rowspan="2">Page URL</th>
+						<th width="30%" colspan="3">Feature data</th>  
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
+						<th width="10%">Cluster mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -591,10 +656,11 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
+						  <th>Cluster mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
-						  <th colspan="2">Feature data</th>
+						  <th colspan="3">Feature data</th>
 					  </tr>
 				  </tfoot>
 			  </table>
@@ -607,11 +673,12 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example8">
 				  <thead>
 					<tr>
-						<th width="80%" rowspan="2">Page URL</th>
-						<th width="20%" colspan="2">Feature data</th>  
+						<th width="70%" rowspan="2">Page URL</th>
+						<th width="30%" colspan="3">Feature data</th>  
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
+						<th width="10%">Cluster mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -622,10 +689,11 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
+						  <th>Cluster mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
-						  <th colspan="2">Feature data</th>
+						  <th colspan="3">Feature data</th>
 					  </tr>
 				  </tfoot>
 			  </table>
@@ -638,11 +706,12 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example9">
 				  <thead>
 					<tr>
-						<th width="80%" rowspan="2">Page URL</th>
-						<th width="20%" colspan="2">Feature data</th>  
+						<th width="70%" rowspan="2">Page URL</th>
+						<th width="30%" colspan="3">Feature data</th>  
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
+						<th width="10%">Cluster mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -653,10 +722,11 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
+						  <th>Cluster mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
-						  <th colspan="2">Feature data</th>
+						  <th colspan="3">Feature data</th>
 					  </tr>
 				  </tfoot>
 			  </table>
@@ -669,11 +739,12 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example10">
 				  <thead>
 					<tr>
-						<th width="80%" rowspan="2">Page URL</th>
-						<th width="20%" colspan="2">Feature data</th>  
+						<th width="70%" rowspan="2">Page URL</th>
+						<th width="30%" colspan="3">Feature data</th>  
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
+						<th width="10%">Cluster mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -684,10 +755,11 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
+						  <th>Cluster mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
-						  <th colspan="2">Feature data</th>
+						  <th colspan="3">Feature data</th>
 					  </tr>
 				  </tfoot>
 			  </table>
