90pc through offsite table mods

--- a/statseo.html
+++ b/statseo.html
@@ -230,8 +230,8 @@
 		plot5 = jQuery.jqplot('chart5', [[s1],[s2]], {
 			
 			// Only animate if we're not using excanvas (not in IE 7 or IE 8)..
-			animate: !$.jqplot.use_excanvas,
-			// seriesColors:['#00FF00', '#FF0000'],
+			//animate: !$.jqplot.use_excanvas,
+			 seriesColors:['#00FF00', '#FF0000'],
 			series:[
 			            {label:'Healthy urls', seriesColors: ['#00FF00']},
 			            {label:'At risk urls', seriesColors: ['#FF0000']}
@@ -275,8 +275,8 @@
 			plot5 = jQuery.jqplot('chart6', [[s1],[s2]], {
 			
 				// Only animate if we're not using excanvas (not in IE 7 or IE 8)..
-				animate: !$.jqplot.use_excanvas,
-				// seriesColors:['#00FF00', '#FF0000'],
+				// animate: !$.jqplot.use_excanvas,
+				seriesColors:['#00FF00', '#FF0000'],
 				series:[
 				            {label:'Healthy links', seriesColors: ['#00FF00']},
 				            {label:'At risk links', seriesColors: ['#FF0000']}
