90pc through offsite table mods

--- a/statseo.html
+++ b/statseo.html
@@ -231,10 +231,10 @@
 			title: 'Onsite URL status',
 			// Only animate if we're not using excanvas (not in IE 7 or IE 8)..
 			//animate: !$.jqplot.use_excanvas,
-			series:[
-			            {label:'Healthy urls', seriesColors: ['#00FF00']},
-			            {label:'At risk urls', seriesColors: ['#FF0000']}
-			        ],
+			// series:[
+// 			            {label:'Healthy urls', seriesColors: ['#00FF00']},
+// 			            {label:'At risk urls', seriesColors: ['#FF0000']}
+// 			        ],
 			seriesDefaults:{
 				renderer:jQuery.jqplot.BarRenderer,
 				shadowAngle: 135,
