--- a/barchart2.html
+++ b/barchart2.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<link href="../src/nv.d3.css" rel="stylesheet" type="text/css">
+<link href="src/nv.d3.css" rel="stylesheet" type="text/css">
 
 <style>
 
