--- a/barchart2.html
+++ b/barchart2.html
@@ -36,14 +36,14 @@ text {
     <svg></svg>
   </div>
 
-<script src="../lib/d3.v3.js"></script>
-<script src="../nv.d3.js"></script>
-<script src="../src/utils.js"></script>
-<script src="../src/tooltip.js"></script>
-<script src="../src/models/legend.js"></script>
-<script src="../src/models/axis.js"></script>
-<script src="../src/models/multiBarHorizontal.js"></script>
-<script src="../src/models/multiBarHorizontalChart.js"></script>
+<script src="lib/d3.v3.js"></script>
+<script src="nv.d3.js"></script>
+<script src="src/utils.js"></script>
+<script src="src/tooltip.js"></script>
+<script src="src/models/legend.js"></script>
+<script src="src/models/axis.js"></script>
+<script src="src/models/multiBarHorizontal.js"></script>
+<script src="src/models/multiBarHorizontalChart.js"></script>
 <script src="stream_layers.js"></script>
 <script>
 
