--- a/barchart2.html
+++ b/barchart2.html
@@ -37,14 +37,14 @@ text {
   </div>
 
 <script src="lib/d3.v3.js"></script>
-<script src="nv.d3.js"></script>
+<script src="assets/js/nv.d3.js"></script>
 <script src="src/utils.js"></script>
 <script src="src/tooltip.js"></script>
 <script src="src/models/legend.js"></script>
 <script src="src/models/axis.js"></script>
 <script src="src/models/multiBarHorizontal.js"></script>
 <script src="src/models/multiBarHorizontalChart.js"></script>
-<script src="stream_layers.js"></script>
+<script src="assets/js/stream_layers.js"></script>
 <script>
 
 
