--- a/statseo.html
+++ b/statseo.html
@@ -273,43 +273,29 @@ text {
 
 long_short_data = [ 
   {
-    key: 'Series1',
+    key: 'Harmful',
     color: '#d62728',
     values: [
       { 
-        "label" : "Group A" ,
+        "label" : "Onsite" ,
         "value" : -1.8746444827653
       } , 
       { 
-        "label" : "Group B" ,
+        "label" : "Offsite" ,
         "value" : -8.0961543492239
       } 
     ]
   },
   {
-    key: 'Series2',
+    key: 'Healthy',
     color: '#1f77b4',
     values: [
       { 
-        "label" : "Group A" ,
+        "label" : "Onsite" ,
         "value" : 25.307646510375
       } , 
       { 
-        "label" : "Group B" ,
-        "value" : 16.756779544553
-      } 
-    ]
-  },
-  {
-    key: 'Series3',
-    color: '#2ca02c',
-    values: [
-      { 
-        "label" : "Group A" ,
-        "value" : -25.307646510375
-      } , 
-      { 
-        "label" : "Group B" ,
+        "label" : "Offsite" ,
         "value" : 16.756779544553
       } 
     ]
