--- a/statseo.html
+++ b/statseo.html
@@ -588,7 +588,7 @@ nv.addGraph(function() {
 	  </div>
 	  
 	  <div class="well">
-		  <h2>Onsite pages summary</h2>
+		  <h2>Domain health status summary</h2>
 		  <p></p>
 	  </div>
 	  <!-- <p>
@@ -757,8 +757,10 @@ nv.addGraph(function() {
 			  <p></p>
 		  </div>
 		  
-		  <div class='clickableRow' href="/offsite_SQ_drilldown.html" id="chart6" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
+		 <!-- 
+ <div class='clickableRow' href="/offsite_SQ_drilldown.html" id="chart6" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
 		  <pre class="code brush:js"></pre>
+ -->
 		  
 		  <!-- <p>
 			  <a href="/offsite.html">Click for offsite readability feature summary</a>
