charts and API page overhaul

--- a/statseo.html
+++ b/statseo.html
@@ -287,6 +287,20 @@ long_short_data = [
     ]
   },
   {
+    key: 'Neutral',
+    color: '#d62728',
+    values: [
+      { 
+        "label" : "Onsite" ,
+        "value" : -1.8746444827653
+      } , 
+      { 
+        "label" : "Offsite" ,
+        "value" : -8.0961543492239
+      } 
+    ]
+  },
+  {
     key: 'Healthy',
     color: '#1f77b4',
     values: [
@@ -301,72 +315,6 @@ long_short_data = [
     ]
   }
 ];
-
-
-
-long_short_pos_data = [ 
-  {
-    key: 'Series1',
-    color: '#d62728',
-    values: [
-      { 
-        "label" : "Group A" ,
-        "value" : 1.8746444827653
-      } , 
-      { 
-        "label" : "Group B" ,
-        "value" : 8.0961543492239
-      } 
-    ]
-  },
-  {
-    key: 'Series2',
-    color: '#1f77b4',
-    values: [
-      { 
-        "label" : "Group A" ,
-        "value" : 25.307646510375
-      } , 
-      { 
-        "label" : "Group B" ,
-        "value" : 16.756779544553
-      } 
-    ]
-  }
-];
-
-
-long_short_neg_data = [ 
-  {
-    key: 'Series1',
-    color: '#d62728',
-    values: [
-      { 
-        "label" : "Group A" ,
-        "value" : -1.8746444827653
-      } , 
-      { 
-        "label" : "Group B" ,
-        "value" : -8.0961543492239
-      } 
-    ]
-  },
-  {
-    key: 'Series2',
-    color: '#1f77b4',
-    values: [
-      { 
-        "label" : "Group A" ,
-        "value" : -25.307646510375
-      } , 
-      { 
-        "label" : "Group B" ,
-        "value" : -16.756779544553
-      } 
-    ]
-  }
-];
-
 
 
 
