chart colour mod

--- a/statseo.html
+++ b/statseo.html
@@ -274,43 +274,43 @@ text {
 long_short_data = [ 
   {
     key: 'Harmful',
-    color: '#d62728',
+    color: '#ff0000',
     values: [
       { 
         "label" : "Onsite" ,
-        "value" : -1.8746444827653
+        "value" : -250
       } , 
       { 
         "label" : "Offsite" ,
-        "value" : -8.0961543492239
+        "value" : -5
       } 
     ]
   },
   {
     key: 'Neutral',
-    color: '#d62728',
+    color: '#ff9900',
     values: [
       { 
         "label" : "Onsite" ,
-        "value" : -1.8746444827653
+        "value" : 50
       } , 
       { 
         "label" : "Offsite" ,
-        "value" : -8.0961543492239
+        "value" : 0
       } 
     ]
   },
   {
     key: 'Healthy',
-    color: '#1f77b4',
+    color: '#00ff00',
     values: [
       { 
         "label" : "Onsite" ,
-        "value" : 25.307646510375
+        "value" : 253
       } , 
       { 
         "label" : "Offsite" ,
-        "value" : 16.756779544553
+        "value" : 3
       } 
     ]
   }
