--- a/statseo.html
+++ b/statseo.html
@@ -326,7 +326,7 @@ nv.addGraph(function() {
       .margin({top: 30, right: 20, bottom: 50, left: 175})
       //.showValues(true)
       //.tooltips(false)
-      .barColor(d3.scale.category20().range())
+      //.barColor(d3.scale.category20().range())
       .transitionDuration(250)
       .stacked(true)
       //.showControls(false);
