--- a/statseo.html
+++ b/statseo.html
@@ -278,7 +278,7 @@ long_short_data = [
     values: [
       { 
         "label" : "Onsite" ,
-        "value" : -250
+        "value" : -146
       } , 
       { 
         "label" : "Offsite" ,
@@ -302,7 +302,7 @@ long_short_data = [
   },
   {
     key: 'Healthy',
-    color: '#00ff00',
+    color: '#00cc00',
     values: [
       { 
         "label" : "Onsite" ,
@@ -323,7 +323,7 @@ nv.addGraph(function() {
   chart = nv.models.multiBarHorizontalChart()
       .x(function(d) { return d.label })
       .y(function(d) { return d.value })
-      .margin({top: 30, right: 20, bottom: 50, left: 175})
+      .margin({top: 30, right: 20, bottom: 50, left: 30})
       //.showValues(true)
       //.tooltips(false)
       //.barColor(d3.scale.category20().range())
