chart colour mod

--- a/statseo.html
+++ b/statseo.html
@@ -328,7 +328,7 @@ nv.addGraph(function() {
       //.tooltips(false)
       //.barColor(d3.scale.category20().range())
       .transitionDuration(250)
-      .grouped(true)
+      .stacked(false)
       //.showControls(false);
 
   chart.yAxis
