drilldown JSON mod

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -125,7 +125,7 @@
 
 // data for chart
 
-var_feature_list_=_{1:"average_backlink_flesch_reading_ease",
+var feature_list= {1:"average_backlink_flesch_reading_ease",
 2:"number_of_images_missing_alt",
 3:"number_of_embedded_javascripts",
 4:"title_number_of_dictionary_words",
