drilldown JSON mod

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -165,7 +165,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 		$('#example1').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
-			"sAjaxDataProp": "onsite.average_backlink_flesch_reading_ease",
+			"sAjaxDataProp": "onsite."+ feature_list[1],
 			"aoColumns": [
 			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
@@ -193,7 +193,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 		$('#example3').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
-			"sAjaxDataProp": "onsite.3",
+			"sAjaxDataProp": "onsite."+ feature_list[3],
 			"aoColumns": [
 			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
@@ -207,7 +207,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 		$('#example4').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
-			"sAjaxDataProp": "onsite.Number of hyperlinks",
+			"sAjaxDataProp": "onsite."+ feature_list[4],
 			"aoColumns": [
 			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
@@ -221,7 +221,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 		$('#example5').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
-			"sAjaxDataProp": "onsite.Title character length",
+			"sAjaxDataProp": "onsite."+ feature_list[5],
 			"aoColumns": [
 			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
@@ -235,7 +235,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 		$('#example6').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
-			"sAjaxDataProp": "onsite.Number of external CSS styles",
+			"sAjaxDataProp": "onsite."+ feature_list[6],
 			"aoColumns": [
 			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
@@ -249,7 +249,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 		$('#example7').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
-			"sAjaxDataProp": "onsite.Number of titles same as h1",
+			"sAjaxDataProp": "onsite."+ feature_list[7],
 			"aoColumns": [
 			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
@@ -263,7 +263,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 		$('#example8').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
-			"sAjaxDataProp": "onsite.Title total number of syllables",
+			"sAjaxDataProp": "onsite."+ feature_list[8],
 			"aoColumns": [
 			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
@@ -277,7 +277,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 		$('#example9').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
-			"sAjaxDataProp": "onsite.Anchor number of unique words",
+			"sAjaxDataProp": "onsite."+ feature_list[9],
 			"aoColumns": [
 			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
@@ -291,7 +291,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 		$('#example10').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/5_alchemyviral_XDrill_11-Nov-13.json",
-			"sAjaxDataProp": "onsite.Total number of dictionary words",
+			"sAjaxDataProp": "onsite."+ feature_list[10],
 			"aoColumns": [
 			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
